ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /frontend(/|$)(.*)
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - pathType: Prefix
        path: /backend(/|$)(.*)
        backend:
          service:
            name: backend
            port:
              number: 8080
